data/repos_history/benebobaa/k8s-deployment-learn/2024-08-02T07:57:51Z/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production

---
apiVersion: v1
kind: Service
metadata:
  name: bene-cluster
  namespace: production
  labels:
    app: bene-cluster
spec:
  selector:
    app: bene-cluster
  ports:
    - port: 80
      name: http
      targetPort: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bene-cluster
  namespace: production
spec:
  selector:
    matchLabels:
      app: bene-cluster
  strategy:
    type: RollingUpdate
  template: #Template for container
    metadata:
      labels:
        app: bene-cluster
    spec:
      containers:
        - name: any
          image: asia.gcr.io/$PROJECT_ID/production/wooless:$SHORT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: bene-cluster
          resources:
            requests:
              cpu: 50m

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bene-cluster
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bene-ip
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: bene-cluster
spec:
  rules:
    - host: cloud.beneboba.me
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: bene-cluster
                port:
                  number: 80
